--- a/bgtrekwebsite.client/src/pages/Store/Store.module.css
+++ b/bgtrekwebsite.client/src/pages/Store/Store.module.css
@@ -1,10 +1,3 @@
-:root {
-    --default-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-        Ubuntu, "Helvetica Neue", Helvetica, Arial, "PingFang SC",
-        "Hiragino Sans GB", "Microsoft Yahei UI", "Microsoft Yahei",
-        "Source Han Sans CN", sans-serif;
-}
-
 .mainContainer {
     overflow: hidden;
 
@@ -166,12 +159,25 @@ button {
     overflow: hidden;
 }
 
-.group {
-    flex-shrink: 0;
-    position: relative;
-    width: 336px;
-    height: 367px;
-    z-index: 6;
+.sideAccordion {
+    width: 100%;
+}
+
+.sideButtonContainer {
+    padding: 0;
+    margin: 0;
+    width: 100%;
+}
+
+.sideButtonContainer h2>button,
+.sideButtonContainer h2>button:focus {
+    padding: 0;
+    background-color: unset !important;
+    box-shadow: none !important;
+}
+
+.sideButtonContainer h2>button::after {
+    display: none;
 }
 
 .sideButton {
@@ -188,9 +194,9 @@ button {
     background: linear-gradient(#ffffff, #ffffff) 50% 50%/calc(100% - 6px) calc(100% - 6px) no-repeat,
         linear-gradient(0deg, #000000 0%, rgba(0, 0, 0, 0) 50%);
     border-radius: 0px;
-    padding: 7px;
     box-sizing: border-box;
     border: unset;
+    padding-inline: 0.5rem;
 }
 
 .sideButton:hover {
@@ -199,6 +205,12 @@ button {
 
 .sideButton:hover * {
     filter: brightness(0) saturate(100%) invert(100%) sepia(100%) saturate(1%) hue-rotate(56deg) brightness(106%) contrast(101%);
+}
+
+.acordion-button,
+.accordion-body {
+    padding: 0 !important;
+    margin: 0;
 }
 
 .sort2 {
@@ -346,7 +358,7 @@ button {
     bottom: -0.5rem;
     left: 0;
     position: absolute;
-    height: 1px;
+    height: 2px;
     width: 100%;
     background: -webkit-linear-gradient(left, rgba(141, 166, 255, 0) 0%, rgba(141, 166, 255, 1) 20%, rgba(141, 166, 255, 1) 80%, rgba(141, 166, 255, 0) 100%);
 }
@@ -441,17 +453,18 @@ button {
     filter: invert(100%);
 }
 
-.text17 {
+.pageNumber {
     flex-shrink: 0;
     flex-basis: auto;
     position: relative;
     height: 41px;
     color: #ffffff;
+    border: none;
     font-family: Kulim Park, var(--default-font-family);
     font-size: 3em;
     font-weight: 700;
     line-height: 41px;
-    text-align: left;
+    text-align: center;
     text-transform: capitalize;
     white-space: nowrap;
     z-index: 30;
