--- a/bgtrekwebsite.client/src/pages/Store/Store.module.css
+++ b/bgtrekwebsite.client/src/pages/Store/Store.module.css
@@ -133,6 +133,7 @@ button {
 }
 
 .frame {
+    height: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -530,7 +531,7 @@ button {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     flex-wrap: wrap;
     flex-grow: 1;
     flex-shrink: 0;
@@ -547,8 +548,9 @@ button {
 .row {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
     width: 100%;
+    gap: 5%;
+    justify-content: flex-start;
 }
 
 .productContainer {
